--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Terms and Conditions
+description: Terms and Conditions for the LiftStation.cloud software collection
